cluster/apps/potber/potber-api/production/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: potber-api-production
  namespace: potber
  labels:
    # Used by the ServiceMonitor
    app: potber-api-staging
spec:
  selector:
    app: potber-api-production
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: metrics
      protocol: TCP
      port: 9100
      targetPort: 9100
