cluster/apps/potber/potber-api/production/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: potber-api-production
  namespace: potber
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/server-snippet: |-
      location /metrics
        deny all;
spec:
  tls:
    - hosts:
        - "*.potber.de"
      secretName: potber.de
  rules:
    - host: api.potber.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: potber-api-production
                port:
                  name: http
